SONARPY-4582 Fix SonarQube issues after Java 21 migration
GitOrigin-RevId: a31d6363c6732a1a27d3e7fce5e805c4c104fbb5